# rinha-de-compiler

./: .gitignore  Cargo.toml  Main.rinha  PARTICIPANTS.md  README.md  SPECS.md  TESTS.md  build.rs  build.zig  e.json  index.js  package-lock.json  package.json  participantes.txt  utils.js
.github/workflows/: release.yml
docs/: sepcs.md
files/: combination.json  combination.rinha  fib.json  fib.rinha  print.json  print.rinha  sum.json  sum.rinha
src/: ast.rs  ast_types.ts  interpreter.ts  lib.rs  main.rs  main.ts  parser.rs  rinha.lalrpop  test.ts
src/ast/: decl.rs  stmt.rs
src/passes/: parser.rs  resolver.rs
