[package]
name = "rinha"
version = "0.0.4"
edition = "2021"
description = "Competição saudável de compiladores"
authors = ["Community"]
documentation = "https://github.com/aripiprazole/rinha-de-compiler"
license = "MIT"
keywords = ["parsing", "programming-language"]
categories = ["parsing", "compilers", "text-editors"]

[dependencies]
# Parser
lalrpop-util = { version = "0.20.0", default-features = false, features = [
  "lexer",
  "unicode",
] }

# Cli library dependencies
clap = { version = "4.2.4", features = ["derive"] }

# Error reporting
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.46"
bupropion = { version = "0.0.14" }

# Logging dependencies
log = "0.4.20"
fern = "0.6.2"
humantime = "2.1.0"
logos = "0.13.0"
owo-colors = "3.5.0"

# JSON
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.0"
